--- a/Readme
+++ b/Readme
@@ -1,2 +1,2 @@
-The project is deployed in heroku .
-link: https://django-filter-checkbox.herokuapp.com/
+The project is deployed in PythonAnyWhere .
+link: https://morshed.pythonanywhere.com/
